test/errors/python_error/zs/scope_symbols/union_field_names_clash_error.zs
package scope_symbols.union_field_names_clash_error;

union TestUnion
{
    uint32 some_field;
    float32 someField;
};
